.provarCaches/00D5f000005vwGkEAI/objects/rstk__soconrev__c.object
<CustomObject>
    <description>soconrev__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soconrev_socontract__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstk__soconrev_rev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(rstk__soconrev_rev__c) +&apos;(&apos; + TEXT(rstk__soconrev_date__c) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soconrev_aftfprice__c</fullName>
        <inlineHelpText>When the Revision is for a &quot;product change&quot; and it is the price that changed, this reflects the price after the change. If the change is an Add, this value will be the price of product added. If a Delete, this will be $0.</inlineHelpText>
        <label>Price After  Change</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrev_befprice__c</fullName>
        <inlineHelpText>When the Revision is for a &quot;product change&quot; and it is the price that changed, this reflects the price prior to the change. If the change is an Add, this value will be $0. If a Delete, it is the price if the Product that was deleted.</inlineHelpText>
        <label>Price Before Change</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrev_date__c</fullName>
        <inlineHelpText>This is the date that the change that triggered the Revision occurred.</inlineHelpText>
        <label>Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soconrev_rev__c</fullName>
        <inlineHelpText>The current Contract Revision.  This value is auto-assigned as each revision is made, incrementing the status by 1.</inlineHelpText>
        <label>Contract Revision</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soconrev_revevent__c</fullName>
        <inlineHelpText>This reflects the event that initiated this revision.  Events that cause a Revision are -

Purchase Product Additions
Purchase Product Changes
Purchase Product Deletes
Recurring Charge Additions
Recurring Charge Changes
Recurring Charge Deletes</inlineHelpText>
        <label>Revision Causing Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase Product Addition</fullName>
                </value>
                <value>
                    <fullName>Purchase Product Change</fullName>
                </value>
                <value>
                    <fullName>Purchase Product Delete</fullName>
                </value>
                <value>
                    <fullName>Recurring Charge Addition</fullName>
                </value>
                <value>
                    <fullName>Recurring Charge Change</fullName>
                </value>
                <value>
                    <fullName>Recurring Charge Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soconrev_socontract__c</fullName>
        <inlineHelpText>The Sales Contract that this revision record applies to.</inlineHelpText>
        <label>Sales Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Revision History</relationshipLabel>
        <relationshipName>soconrevs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soconrev_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product for Purchase product or Recurring Charge product for which the change occurred that triggered the Revision.</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Revision Historys</relationshipLabel>
        <relationshipName>soconrevs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Revision History</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Revision Historys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>